adds some changesand new line

--- a/simple.html
+++ b/simple.html
@@ -5,6 +5,7 @@
         <script src="simple.js"></script>
     </head>
     <body>
-        <p>New Text</p>
+        <p>New Text is new</p>
+        <p>Added a new line aswell</p>
     </body>
 </html>
