--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,157 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>App</title>
-        <script src="simple.js"></script>
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+        <title>jQuery lesson</title>
+        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery_lesson.js"></script>
     </head>
     <body>
-        <p>Text 2</p>
+        <div id="example">
+            <p id="para1" class="classA">The first paragraph.</p>
+            <p class="classB">The second paragraph.</p>
+            <p id="para3">The third paragraph.</p>
+            <p id="para4" lang="en-us">The fourth paragraph.</p>
+            <p id="para5" lang="en-gb">The fifth paragraph.</p>
+        </div>
     </body>
+</html> -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>jQuery lesson</title>
+        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery_lesson.js"></script>
+    </head>
+    <body>
+        <p class="classA">The first paragraph.</p>
+        <p class="classB">The second paragraph.</p>
+        <p>The third paragraph.</p>
+        <p lang="en-us">The fourth paragraph.</p>
+        <p lang="en-gb">The fifth paragraph.</p>
+        <div id="example">
+            <p id="para1" class="classA">The first paragraph.</p>
+            <p class="classB">The second paragraph.</p>
+            <p id="para3">The third paragraph.</p>
+            <p id="para4" lang="en-us">The fourth paragraph.</p>
+            <p id="para5" lang="en-gb">The fifth paragraph.</p>
+        </div>
+        <div id="example2">
+            <p class="classA">The first paragraph.</p>
+            <p class="classB">The second paragraph.</p>
+            <p>The third paragraph.</p>
+            <p lang="en-us">The fourth paragraph.</p>
+            <p lang="en-gb">The fifth paragraph.</p>
+        </div>
+    </body>
+</html> -->
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>jQuery lesson</title>
+        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery_lesson.js"></script>
+    </head>
+    <body>
+        <div id="example">
+            <div class="classA">First paragraph.</div>
+            <p class="classA">The second paragraph.</p>
+            <p class="classB" id="para3">The third paragraph.</p>
+            <p class="classB" id="para4" lang="en-us">The fourth paragraph.</p>
+            <p class="classA" id="para5" lang="en-gb">The fifth paragraph.</p>
+        </div>
+    </body>
+</html> -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>jQuery lesson</title>
+        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery_lesson.js"></script>
+    </head>
+    <body>
+        <div id="example">
+            <p >The first paragraph.</p>
+            <div>The second paragraph.</div>
+            <p id="para3">The third paragraph.</p>
+            <p>The fourth paragraph.</p>
+            <div>The fifth paragraph.</div>
+        </div>
+    </body>
+</html> -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>jQuery lesson</title>
+        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery_lesson.js"></script>
+    </head>
+    <body>
+        <div id="example">
+            <p id="para1" class="classA">The first paragraph.</p>
+            <p class="classA">The second paragraph.</p>
+            <p class="classB" id="para3">The third paragraph.</p>
+            <p class="classB" id="para4" lang="en-us">The fourth paragraph.</p>
+            <p class="classA" id="para5" lang="en-gb">The fifth paragraph.</p>
+        </div>
+        <button id="button1" onclick="button1Click()">Button 1</button>
+        <button id="button2" onclick="button2Click()">Button 2</button>
+        <button id="button3" onclick="button3Click()">Button 3</button>
+    </body>
+</html> -->
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>jQuery lesson</title>
+        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery_lesson.js"></script>
+    </head>
+    <body>
+            <p class="classA">First paragraph.</p>
+            <p class="classA">The second paragraph.</p>
+            <p class="classB" id="para3">The third paragraph.</p>
+            <p class="classB" id="para4" lang="en-us">The fourth paragraph.</p>
+            <p class="classA" id="para5" lang="en-gb">The fifth paragraph.</p>
+            <button id="onButton">On</button>
+            <button id="offButton">Off</button>
+    </body>
+</html>   -->
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>jQuery lesson</title>
+        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery_lesson.js"></script>
+    </head>
+    <body>
+        <button id="button1" style="scale: 150%;">Button</button>
+    </body>
+</html> -->
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="f:\Users\Anders\Documents\MyFirstApp\gitGud\css\bootstrap.min.css" rel="stylesheet">
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <h1 class="p-3 bg-dark text-white">Hello, world!</h1>
+  </body>
 </html>
+
+
